environments/production/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod
  annotations:
    kubernetes.io/ingress.global-static-ip-name: hellodwefmdfc
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
    - secretName: tls-cert
  rules:
    - host: asset-app-grp1.ml
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: asset-service
                port:
                  number: 5000

#todo change app with real domain name
